// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when it is not the first element 1`] = `
<div>
  <div
    class="review-collection margin-top-6 border-bottom-1px"
  >
    <h2>
      header key
    </h2>
    <dl
      class="margin-bottom-2"
    >
      <div
        class="review-element margin-bottom-3"
      >
        <dt>
          <strong>
            element a
          </strong>
        </dt>
        <dd
          class="margin-left-0"
        >
          child a
        </dd>
      </div>
      <div
        class="review-element margin-bottom-3"
      >
        <dt>
          <strong>
            element b
          </strong>
        </dt>
        <dd
          class="margin-left-0"
        >
          child b
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`should match snapshot when it is the first element 1`] = `
<div>
  <div
    class="review-collection margin-top-3 border-bottom-1px"
  >
    <h2>
      header key
    </h2>
    <dl
      class="margin-bottom-2"
    >
      <div
        class="review-element margin-bottom-3"
      >
        <dt>
          <strong>
            element a
          </strong>
        </dt>
        <dd
          class="margin-left-0"
        >
          child a
        </dd>
      </div>
      <div
        class="review-element margin-bottom-3"
      >
        <dt>
          <strong>
            element b
          </strong>
        </dt>
        <dd
          class="margin-left-0"
        >
          child b
        </dd>
      </div>
    </dl>
  </div>
</div>
`;
